tests/rosetta/out/Smalltalk/abundant-deficient-and-perfect-number-classifications.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abundant-deficient-and-perfect-number-classifications.st:14: parse error, expected '|' or identifier
